--- a/user_templates/printer.cfg
+++ b/user_templates/printer.cfg
@@ -15,6 +15,7 @@
 ##### XY axis motors configuration -----------------------------------
 # [include config/hardware/axis/XY/0.9d_xy.cfg]
 # [include config/hardware/axis/XY/1.8d_xy_V0specific.cfg]
+# [include config/hardware/axis/XY/1.8d_xy_Micron.cfg]
 # [include config/hardware/axis/XY/1.8d_xy.cfg]
 # --------------------------------------------------------------------
 
@@ -23,10 +24,12 @@
 # [include config/hardware/axis/Z/Trident_1.8d_TR8x8_z.cfg]
 # [include config/hardware/axis/Z/Trident_1.8d_TR8x4_z.cfg]
 # [include config/hardware/axis/Z/TriZero_0.9d_z.cfg]
+# [include config/hardware/axis/Z/Micron_1.8d_z.cfg]
 # [include config/hardware/axis/Z/V2.4_1.8d_base_z.cfg]
 # --------------------------------------------------------------------
 
 ##### Dimensions configuration ---------------------------------------
+# [include config/hardware/axis/default_180mm.cfg]
 # [include config/hardware/axis/default_250mm.cfg]
 # [include config/hardware/axis/default_300mm.cfg]
 # [include config/hardware/axis/default_350mm.cfg]
@@ -41,6 +44,7 @@
 # [include config/hardware/extruder/galileo.cfg]
 # [include config/hardware/extruder/lgx_heavy.cfg]
 # [include config/hardware/extruder/lgx_lite.cfg]
+# [include config/hardware/extruder/sherpa.cfg]
 # --------------------------------------------------------------------
 
 ##### Heated bed configuration ---------------------------------------
