--- a/config/hardware/axis/XY/1.8d_xy_Micron.cfg
+++ b/config/hardware/axis/XY/1.8d_xy_Micron.cfg
@@ -7,7 +7,7 @@ full_steps_per_rotation: 200
 interpolate: False
 run_current: 0.8
 sense_resistor: 0.110
-=stealthchop_threshold: 1
+stealthchop_threshold: 1
 driver_TBL: 2
 driver_TOFF: 2
 driver_HEND: 1
