--- a/config/mcu_definitions/BTT_Octopus_Max_EZ.cfg
+++ b/config/mcu_definitions/BTT_Octopus_Max_EZ.cfg
@@ -15,7 +15,7 @@ aliases:
     MCU_STOP4=PF1   , MCU_STOP5=PC15 ,
     MCU_PROBE=PB15  ,
     MCU_SERVOS=PB14 ,
-    MCU_PROX=PF11,
+    MCU_PROX=PF11   ,
 
     MCU_HE0=PF6 , MCU_HE1=PA0 , MCU_HE2=PF9 , MCU_HE3=PF7 ,
 
@@ -30,7 +30,7 @@ aliases:
     MCU_NEOPIXEL1=PE10 , MCU_NEOPIXEL2=PE9  ,
     MCU_PS_ON=PF13     ,
     MCU_POWER_DET=PF12 ,
-    MCU_FWS_ADC1=PC0   , MCU_FWS_ADC2=PF10
+    MCU_FWS_ADC1=PC0   , MCU_FWS_ADC2=PF10  ,
     
 
     # LCD-FPC (EXP1 + EXP2)
