--- a/user_templates/mcu_defaults/main/BTT_Octopus_Max_EZ.cfg
+++ b/user_templates/mcu_defaults/main/BTT_Octopus_Max_EZ.cfg
@@ -13,7 +13,7 @@ serial: /dev/serial/by-id/change-me-to-the-correct-mcu-path
 ##--------------------------------------------------------------------
 
 [include config/mcu_definitions/BTT_Octopus_Max_EZ.cfg] # Do not remove this line
-[board_pins octopus_mcu]
+[board_pins octopus_max_ez_mcu]
 mcu: mcu
 aliases:
     X_STEP=MCU_MOTOR0_STEP   , X_DIR=MCU_MOTOR0_DIR   , X_ENABLE=MCU_MOTOR0_ENABLE   , X_TMCUART=MCU_MOTOR0_UART   ,
