More 180mm changes

--- a/user_templates/printer.cfg
+++ b/user_templates/printer.cfg
@@ -131,6 +131,7 @@
 #---------------------------------#
 
 ##### Bed mesh ------------------------------------------------------
+# [include config/software/bed_mesh/bed_mesh_180mm.cfg]
 # [include config/software/bed_mesh/bed_mesh_250mm.cfg]
 # [include config/software/bed_mesh/bed_mesh_300mm.cfg]
 # [include config/software/bed_mesh/bed_mesh_350mm.cfg]
@@ -156,6 +157,7 @@
 # -------------------------------------------------------------------
 
 ##### QGL vs Z_TILT configuration -----------------------------------
+# [include config/software/tilting/qgl_180mm.cfg]
 # [include config/software/tilting/qgl_250mm.cfg]
 # [include config/software/tilting/qgl_300mm.cfg]
 # [include config/software/tilting/qgl_350mm.cfg]
